--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Info.plist
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Info.plist
@@ -24,6 +24,8 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>LaunchScreenStoryboard</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This is to allow you to take your picture</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
